force-app/main/default/objects/Daily_Progress__c/Daily_Progress__c.object-meta.xml
<CustomObject>
    <description>Daily Progress Report â€” captures daily quantities installed, resources, and site conditions per Work Package.</description>
    <label>Daily Progress</label>
    <nameField>
        <displayFormat>DPR-{00000}</displayFormat>
        <label>DPR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Progress Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>