force-app/main/default/objects/Daily_Progress__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Daily Reports</relationshipLabel>
    <relationshipName>Approved_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>