force-app/main/default/objects/Daily_Progress__c/fields/Equipment_Hours__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Hours__c</fullName>
    <label>Equipment Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>