force-app/main/default/objects/Daily_Progress__c/fields/Percent_Complete_Day__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete_Day__c</fullName>
    <label>Percent Complete (Day)</label>
    <description>Optional direct percent-complete entry for the day. If set, used as the leaf WBS progress; otherwise progress is derived from cumulative Qty Installed / Planned Quantity.</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>