force-app/main/default/objects/Daily_Progress__c/fields/Productivity__c.field-meta.xml
<CustomField>
    <fullName>Productivity__c</fullName>
    <formula>IF(Hours_Worked__c &gt; 0, Qty_Installed__c / Hours_Worked__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity (Qty/Hour)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>