force-app/main/default/objects/Daily_Progress__c/fields/Qty_Installed__c.field-meta.xml
<CustomField>
    <fullName>Qty_Installed__c</fullName>
    <label>Qty Installed</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>