force-app/main/default/objects/Daily_Progress__c/fields/Quality_Issues__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quality Issues</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>