force-app/main/default/objects/Daily_Progress__c/fields/Safety_Incidents__c.field-meta.xml
<CustomField>
    <fullName>Safety_Incidents__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Safety Incidents</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>