force-app/main/default/objects/Daily_Progress__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submitted Daily Reports</relationshipLabel>
    <relationshipName>Submitted_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>