force-app/main/default/objects/Daily_Progress__c/fields/WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>WBS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Daily Progress Reports</relationshipLabel>
    <relationshipName>Daily_Progress_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>