force-app/main/default/objects/Daily_Progress__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <label>Weather</label>
    <length>100</length>
    <type>Text</type>
</CustomField>