force-app/main/default/objects/Daily_Progress__c/fields/Work_Package__c.field-meta.xml
<CustomField>
    <fullName>Work_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Package</label>
    <referenceTo>Work_Package__c</referenceTo>
    <relationshipLabel>Daily Progress Reports</relationshipLabel>
    <relationshipName>Daily_Progress_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>